--- a/_notes/اقتصادي.md
+++ b/_notes/اقتصادي.md
@@ -6,3 +6,7 @@ layout: ar
 
 استهدفت رؤية 2030 الاقتصادية بالمملكة العربية السعودية إحداث تغيير اقتصادي هيكلي، كما وعدت بمزيد من الشفافية والمحاسبة وإشراك المواطنين وخلق مساحات اقتصادية واجتماعية أكثر انفتاحًا. وعلى المدى البعيد في حالة نجاحها، بإمكان هذه الرؤية إعادة تشكيل العلاقة بين الدولة والمواطن وتشكيل النظام السياسي بأكمله، أو تؤدي إلى تحول ديمقراطي. تستهدف الورقة دراسة مدى تأثير رؤية 2030 على التحول الديمقراطي في المملكة. وقد اعتمدت في ذلك على تعريف التحول الديمقراطي، الدولة الريعية، ومقاربة الصفقة السلطوية كإطار نظري ومفاهيمي للورقة، بينما اعتمدت على المنهج الوصفي التحليلي لفهم العلاقة بين الإصلاحات الاقتصادية والتحول الديمقراطي. وخلصت الدارسة لأن النظام السياسي في المملكة يوظف الإصلاحات الاقتصادية لعدة غايات؛ كمناورة لاحتواء المتغيرات الداخلية والخارجية، وكوسيلة للاستئثار بالسلطة، إلى جانب إضفاء شرعية جديدة على النظام في الداخل والخارج. ويمكن الاستدلال على ذلك من خلال ثلاثة مؤشرات: الاتجاه لتغيير النخب وتمركز السلطة، استمرار سياسات القمع ضد المعارضة، اهتمام النظام بضمان استقرار واستمرار سلطويته.
 
+git@github.com:Tarek-g/digital-garden-jekyll-template.git
+
+git remote add new-fork https://github.com/Tarek-g/jekyll-G
+
